2011-07-07  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12868]
	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Define Lustre constants.
	* sysdeps/unix/sysv/linux/internal_statvfs.c (__statvfs_getflags):
	Handle Lustre.
	* sysdeps/unix/sysv/linux/pathconf.c (__statfs_link_max): Likewise.
	(__statfs_filesize_max): Likewise.
	Patch mostly by Andreas Dilger <adilger@whamcloud.com>.

2011-07-05  Andreas Jaeger  <aj@suse.de>

	* resolv/res_comp.c (dn_skipname): Remove unused variable.

2011-07-06  Marek Polacek  <mpolacek@redhat.com>

	* nis/nss_nisplus/nisplus-spwd.c (_nss_nisplus_setspent): Honour the
	`status' variable.
	* nis/nss_nisplus/nisplus-ethers.c (_nss_nisplus_setetherent):
	Likewise.

2011-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (strop-tests): Add strncat.
	* string/test-strncat.c: New file.

2011-06-30  Marek Polacek  <mpolacek@redhat.com>

	* iconvdata/johab.c: Don't inline `johab_sym_hanja_to_ucs' function.

2011-06-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/s390-64/Makefile ($(inst_gconvdir)/gconv-modules):
	Copy rule from iconvdata/Makefile.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12922]
	* posix/getopt.c (_getopt_internal_r): When "W;" is in short options
	but no long options are defined, just return 'W'.

2011-06-22  Marek Polacek  <mpolacek@redhat.com>

	[BZ #9696]
	* stdlib/strtod_l.c (round_and_return): Set ERANGE instead of EDOM.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	* inet/getnetgrent_r.c (internal_getnetgrent_r): Fix check for known
	netgroups to read.
	(innetgr): Likewise.

2011-07-05  Roland McGrath  <roland@hack.frob.com>

	* config.make.in (install_root): Default to $(DESTDIR).

2011-07-05  Ulrich Drepper  <drepper@gmail.com>

	* nscd/nscd_getserv_r.c (nscd_getserv_r): Add cast to avoid warning.

2011-07-02  Roland McGrath  <roland@hack.frob.com>

	* Makerules ($(common-objpfx)format.lds): Fail if result is empty.

	* Makefile ($(common-objpfx)testrun.sh): Generate to work relative to